Updated table cell padding to use ems instead of %, matching the block editor and preventing alignwide/alignfull issues

--- a/style.css
+++ b/style.css
@@ -852,13 +852,13 @@ td {
 	line-height: 1.4;
 	margin: 0;
 	overflow: visible;
-	padding: 2.5%;
+	padding: .5em;
 }
 
 caption {
 	background: #dcd7ca;
 	font-weight: 600;
-	padding: 2.5%;
+	padding: .5em;
 	text-align: center;
 }
 
